--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Github User</string>
+    <string name="sub_app_name">Astro Test</string>
 
     <string name="something_went_wrong" translatable="false">Terjadi kesalahan, silahkan coba kembali</string>
     <string name="failure_network_connection" translatable="false">Tidak ada koneksi internet</string>
@@ -8,4 +9,9 @@
     <string name="failure_unauthorized" translatable="false">Tidak dikenali</string>
     <string name="failure_request_too_large" translatable="false">Permintaan data terlalu besar</string>
     <string name="ok" translatable="false">OK</string>
+
+    <string name="search" translatable="false">Search</string>
+    <string name="asc" translatable="false">ASC</string>
+    <string name="desc" translatable="false">DESC</string>
+    <string name="no_data" translatable="false">No data, insert another keyword</string>
 </resources>
